--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
 <body>
 {#    <h1 data-value="TESTTEXT" class="letters">TESTTEXT</h1>#}
     <h1 data-value="{{ ip_addr }}" class="numbers">{{ ip_addr }}</h1>
+    {% if user.is_authenticated %}
+      <h1 data-value="{{ user.name.upper() }}" class="letters">{{ user.name.upper() }}</h1>
+    {% endif %}
     <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
 </body>
 </html>
