--- a/templates/index.html
+++ b/templates/index.html
@@ -13,30 +13,21 @@
 
 
         <table>
-            <tr>
-                <th>Device</th>
-                <th>Address</th>
-                <th>Last update</th>
-            </tr>
         {% for addr in user_addrs %}
             <tr>
                 <th>{{ addr.device_name }}</th>
                 <th>{{ addr.address }}</th>
-                <th>{{ addr.last_updated }}</th>
+                <th>{{ format_last_updated(addr.last_updated) }}</th>
             </tr>
         {% endfor %}
         </table>
     {% endif %}
 
     <table>
-        <tr>
-            <th>Address</th>
-            <th>Last updated</th>
-        </tr>
     {% for addr in public_addrs %}
         <tr>
             <th>{{ addr.address }}</th>
-            <th>{{ addr.last_updated }}</th>
+            <th>{{ format_last_updated(addr.last_updated) }}</th>
         </tr>
     {% endfor %}
     </table>
