--- a/templates/index.html
+++ b/templates/index.html
@@ -2,36 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ipshare</title>
+    <title>IPSHARE</title>
     <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
 </head>
 <body>
-{#    <h1 data-value="TESTTEXT" class="letters">TESTTEXT</h1>#}
-    <h1 data-value="{{ ip_addr }}" class="numbers">{{ ip_addr }}</h1>
-    {% if user.is_authenticated %}
-      <h1 data-value="{{ user.name.upper() }}" class="letters">{{ user.name.upper() }}</h1>
+{#    <h1 data-value="TESTTEXT" class="data-letters">TESTTEXT</h1>#}
+    <div class="outer-container">
+        <nav>
+            <a href="https://github.com/janluisho/ipshare" data-letters="IPSHARE">IPSHARE</a>
+            <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+            <div id="nav-space"></div>
+            {% if user.is_authenticated %}
+                <a href="" data-letters={{ user.name.upper() }}>{{ user.name.upper() }}</a>
+                <a href="{{ url_for("signout") }}" data-letters="SIGN OUT">SIGN OUT</a>
+            {% else %}
+                <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
+                <a href="{{ url_for("signin") }}" data-letters="SIGN IN">SIGN IN</a>
+            {% endif %}
+        </nav>
 
+        <main>
+            <h1 data-numbers="{{ ip_addr }}">{{ ip_addr }}</h1>
+            {% if user.is_authenticated %}
+              <h1 data-letters="{{ user.name.upper() }}">{{ user.name.upper() }}</h1>
 
-        <table>
-        {% for addr in user_addrs %}
-            <tr>
-                <th>{{ addr.device_name }}</th>
-                <th>{{ addr.address }}</th>
-                <th>{{ format_last_updated(addr.last_updated) }}</th>
-            </tr>
-        {% endfor %}
-        </table>
-    {% endif %}
+                <table>
+                {% for addr in user_addrs %}
+                    <tr>
+                        <th>{{ addr.device_name }}</th>
+                        <th>{{ addr.address }}</th>
+                        <th>{{ format_last_updated(addr.last_updated) }}</th>
+                    </tr>
+                {% endfor %}
+                </table>
+            {% endif %}
 
-    <table>
-    {% for addr in public_addrs %}
-        <tr>
-            <th>{{ addr.address }}</th>
-            <th>{{ format_last_updated(addr.last_updated) }}</th>
-        </tr>
-    {% endfor %}
-    </table>
-
+            <table>
+            {% for addr in public_addrs %}
+                <tr>
+                    <th>{{ addr.address }}</th>
+                    <th>{{ format_last_updated(addr.last_updated) }}</th>
+                </tr>
+            {% endfor %}
+            </table>
+        </main>
+    </div>
     <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
 </body>
 </html>
