--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,13 +3,20 @@
   --background-color: black;
   --forground-highlight-color: black;
   --background-highlight-color: white;
+  --border-color: white;
+  --nav-height: 4rem;
 }
 
 body {
   background-color: var(--background-color);
   margin: 0px;
   padding: 0 1rem;
-  overflow: hidden; /* todo scrolling?*/
+}
+
+#outer-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 nav {
@@ -18,12 +25,11 @@ nav {
   align-items: center;
   gap: 1rem;
   width: 100%;
-  height: 4rem;
-  border-bottom: 1px solid var(--forground-color);
+  height: var(--nav-height);
+  border-bottom: 1px solid var(--border-color);
 }
 
 nav > a {
-  font-size: 1.5rem;
   padding: 0.1rem;
   border-radius: clamp(0.2rem, 0.5vw, 1rem);
   width: 10rem;
@@ -38,9 +44,10 @@ h1, a, th {
   color: var(--forground-color);
   background: var(--background-color);
   font-family: 'Space Mono', monospace;
+  font-size: min(3vw, 1.5rem);
 }
 
-h1:hover, a:hover, th:hover {
+a:hover {
   color: var(--forground-highlight-color);
   background: var(--background-highlight-color);
 }
@@ -49,26 +56,80 @@ a {
   text-decoration: none;
 }
 
-
 main {
-  align-content: center;
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: start;
+  gap: 3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
-/*h1 {*/
-/*  font-family: 'Space Mono', monospace;*/
-/*  font-size: clamp(3rem, 10vw, 10rem);*/
-/*  color: white;*/
-/*  padding: 0rem clamp(1rem, 2vw, 3rem);*/
-/*  border-radius: clamp(0.4rem, 0.75vw, 1rem);*/
-/*}*/
+#ip-addr {
+  justify-self: stretch;
+  vertical-align: middle;
+  flex-grow: 2;
+  order: 1;
+  width: 100%;
+  height: 32vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-/*th {*/
-/*  font-family: 'Space Mono', monospace;*/
-/*  font-size: clamp(2rem, 1vw, 8rem);*/
-/*  color: white;*/
-/*}*/
+#ip-addr > a {
+  font-size: min(8vh, 8vw);
+  text-align: center;
+  padding: 1rem;
+  width: 50vw;
+  border-radius: clamp(1rem, 2vw, 5rem);
+}
 
-/*table {*/
-/*  border-spacing: 5rem 1rem;*/
-/*  text-align: left;*/
-/*}*/
+#user_addrs {
+  order: 2;
+}
+
+.user_tr {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: stretch;
+}
+
+.user_tr > th:first-child {
+  text-align: right;
+}
+
+.user_tr > th:nth-child(2) {
+  text-align: center;
+}
+
+.user_tr > th:last-child {
+  text-align: left;
+}
+
+#visitor_addrs {
+  order: 3;
+}
+
+.visitor_tr {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: stretch;
+  gap: 3rem;
+}
+
+.visitor_tr > th:first-child {
+  text-align: right;
+}
+
+.visitor_tr > th:last-child {
+  text-align: left;
+}
+
+table {
+  width: 100%;
+}
