--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,135 +1,153 @@
 :root {
-  --forground-color: white;
-  --background-color: black;
-  --forground-highlight-color: black;
-  --background-highlight-color: white;
-  --border-color: white;
-  --nav-height: 4rem;
+    --forground-color: white;
+    --background-color: black;
+    --forground-highlight-color: black;
+    --background-highlight-color: white;
+    --border-color: white;
+    --nav-height: 4rem;
 }
 
 body {
-  background-color: var(--background-color);
-  margin: 0px;
-  padding: 0 1rem;
+    background-color: var(--background-color);
+    margin: 0px;
+    padding: 0 1rem;
 }
 
 #outer-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  width: 100%;
-  height: var(--nav-height);
-  border-bottom: 1px solid var(--border-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    height: var(--nav-height);
+    border-bottom: 1px solid var(--border-color);
 }
 
 nav > a {
-  padding: 0.1rem;
-  border-radius: clamp(0.2rem, 0.5vw, 1rem);
-  width: 10rem;
-  text-align: center;
+    padding: 0.1rem;
+    border-radius: clamp(0.2rem, 0.5vw, 1rem);
+    width: 10rem;
+    text-align: center;
 }
 
 #nav-space {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 h1, a, th {
-  color: var(--forground-color);
-  background: var(--background-color);
-  font-family: 'Space Mono', monospace;
-  font-size: min(3vw, 1.5rem);
-}
-
-a:hover {
-  color: var(--forground-highlight-color);
-  background: var(--background-highlight-color);
+    color: var(--forground-color);
+    background: var(--background-color);
+    font-family: 'Space Mono', monospace;
+    font-size: min(3vw, 1.5rem);
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
+}
+
+/*@keyframes animate_line {*/
+/*  from {text-decoration: underline rgba(255, 255, 255, 0);}*/
+/*  to {text-decoration: underline rgba(255, 255, 255, 255);}*/
+/*}*/
+
+/*a:hover {*/
+/*    animation-name: animate_line;*/
+/*    animation-duration: 400ms;*/
+/*    animation-delay: 200ms;*/
+/*    animation-fill-mode: both;*/
+/*}*/
+
+a:hover {
+    color: var(--forground-highlight-color);
+    background: var(--background-highlight-color);
 }
 
 main {
-  flex-grow: 1;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: start;
-  gap: 3rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: start;
+    gap: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 #ip-addr {
-  justify-self: stretch;
-  vertical-align: middle;
-  flex-grow: 2;
-  order: 1;
-  width: 100%;
-  height: 32vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    justify-self: stretch;
+    vertical-align: middle;
+    flex-grow: 2;
+    order: 1;
+    width: 100%;
+    height: 32vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #ip-addr > a {
-  font-size: min(8vh, 8vw);
-  text-align: center;
-  padding: 1rem;
-  width: 50vw;
-  border-radius: clamp(1rem, 2vw, 5rem);
+    font-size: min(8vh, 8vw);
+    text-align: center;
+    padding: 1rem;
+    width: 50vw;
+    border-radius: clamp(1rem, 2vw, 5rem);
+    text-decoration: none;
+}
+
+#ip-addr > a:hover {
+    color: var(--forground-highlight-color);
+    background: var(--background-highlight-color);
 }
 
 #user_addrs {
-  order: 2;
+    order: 2;
 }
 
 .user_tr {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: stretch;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: stretch;
 }
 
 .user_tr > th:first-child {
-  text-align: right;
+    text-align: right;
 }
 
 .user_tr > th:nth-child(2) {
-  text-align: center;
+    text-align: center;
 }
 
 .user_tr > th:last-child {
-  text-align: left;
+    text-align: left;
 }
 
 #visitor_addrs {
-  order: 3;
+    order: 3;
 }
 
 .visitor_tr {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: stretch;
-  gap: 3rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: stretch;
+    gap: 3rem;
 }
 
 .visitor_tr > th:first-child {
-  text-align: right;
+    text-align: right;
 }
 
 .visitor_tr > th:last-child {
-  text-align: left;
+    text-align: left;
 }
 
 table {
-  width: 100%;
+    width: 100%;
 }
