--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -6,27 +6,34 @@
     <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
 </head>
 <body>
-    <div id="outer-container">
-        <nav>
-            <a href="https://github.com/janluisho/ipshare" data-letters="IPSHARE">IPSHARE</a>
-            <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
-            <div id="nav-space"></div>
-            <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
-{# todo           <a href="{{ url_for("signin") }}" data-letters="TODO">TODO</a>#}
-        </nav>
+<div id="outer-container">
+    <nav>
+        <a href="https://github.com/janluisho/ipshare" data-letters="IPSHARE">IPSHARE</a>
+        <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+        <div id="nav-space"></div>
+        <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
+        {# todo           <a href="{{ url_for("signin") }}" data-letters="TODO">TODO</a>#}
+    </nav>
 
-        <main>
-            <form id="signin-form" method="POST" action="">
-                <h1>SIGN IN</h1>
-                {{ form.hidden_tag() }}
-                {{ form.name }}
-                {{ form.password }}
-                {{ form.submit }}
-            </form>
-{#todo            Don't have an account? <a href="{{ url_for('register') }}">REGISTER</a>#}
-        </main>
-    </div>
-    <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
+    <main>
+        <form id="signin-form" method="POST" action="">
+            <h1>SIGN IN</h1>
+            {{ form.hidden_tag() }}
+            {{ form.name }}
+            {{ form.password }}
+            {{ form.submit }}
+        </form>
+        {#todo            Don't have an account? <a href="{{ url_for('register') }}">REGISTER</a>#}
+{#        {% if form.name.errors %}#}
+{#            <ul class="errors">#}
+{#                {% for error in form.name.errors %}#}
+{#                    <li>{{ error }}</li>#}
+{#                {% endfor %}#}
+{#            </ul>#}
+{#        {% endif %}#}
+    </main>
+</div>
+<script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
 
 </body>
 </html>
