style Sign in error with flash

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -188,7 +188,10 @@ input:focus {
     background: var(--background-highlight-color);
 }
 
-.user-or-pw-wrongg {
-    outline: 3px solid red; /*todo red or green depending on min and max len*/
+.user-or-pw-wrong {
+    background: darkred;
 }
 
+.error {
+    color: red;
+}
