--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -24,13 +24,21 @@
             {{ form.submit }}
         </form>
         {#todo            Don't have an account? <a href="{{ url_for('register') }}">REGISTER</a>#}
-{#        {% if form.name.errors %}#}
-{#            <ul class="errors">#}
-{#                {% for error in form.name.errors %}#}
-{#                    <li>{{ error }}</li>#}
-{#                {% endfor %}#}
-{#            </ul>#}
-{#        {% endif %}#}
+        {#        {% if form.name.errors %}#}
+        {#            <ul class="errors">#}
+        {#                {% for error in form.name.errors %}#}
+        {#                    <li>{{ error }}</li>#}
+        {#                {% endfor %}#}
+        {#            </ul>#}
+        {#        {% endif %}#}
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <h1 class="{{ category }}">{{ message }}</h1>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     </main>
 </div>
 <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
