--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>IPSHARE</title>
     <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
 </head>
 <body>
 {#    <h1 data-value="TESTTEXT" class="data-letters">TESTTEXT</h1>#}
