extend base.html and style impressum

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,7 +40,7 @@ nav > a {
     flex-grow: 1;
 }
 
-h1, a, th {
+h1, a, th, p {
     color: var(--forground-color);
     background: var(--background-color);
     font-family: 'Space Mono', monospace;
@@ -196,3 +196,29 @@ input:focus {
 .error {
     color: red;
 }
+
+#impressum-back {
+    padding: 0.1rem;
+    border-radius: clamp(0.2rem, 0.5vw, 1rem);
+    text-align: center;
+}
+
+#impressum {
+    color: var(--forground-color);
+    height: max(90%, 20rem);
+    width: max(50%, 20rem);
+    padding: 2rem
+}
+
+#impressum > h1 {
+    font-size: min(4vw, 2rem);
+}
+
+
+#mail {
+    text-decoration: underline var(--forground-color);
+}
+#mail:hover {
+    text-decoration: underline var(--forground-highlight-color);
+}
+
