--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -1,47 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>signin</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
-</head>
-<body>
-<div id="outer-container">
-    <nav>
-        <a href="https://github.com/janluisho/ipshare" data-letters="IPSHARE">IPSHARE</a>
-        <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
-        <div id="nav-space"></div>
-        <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
-        {# todo           <a href="{{ url_for("signin") }}" data-letters="TODO">TODO</a>#}
-    </nav>
+{% extends 'base.html' %}
+{% block title %}signin{% endblock %}
 
-    <main>
-        <form id="signin-form" method="POST" action="">
-            {{ form.hidden_tag() }}
-            {{ form.name }}
-            {{ form.password }}
-            {{ form.submit }}
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for category, message in messages %}
-                        <h1 class="{{ category }}">{{ message }}</h1>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-        </form>
-        {#todo            Don't have an account? <a href="{{ url_for('register') }}">REGISTER</a>#}
-        {#        {% if form.name.errors %}#}
-        {#            <ul class="errors">#}
-        {#                {% for error in form.name.errors %}#}
-        {#                    <li>{{ error }}</li>#}
-        {#                {% endfor %}#}
-        {#            </ul>#}
-        {#        {% endif %}#}
+{% block nav %}
+    <a href="{{ url_for("root") }}" data-letters="IPSHARE">IPSHARE</a>
+    <a href="https://github.com/janluisho/ipshare" data-letters="GITHUB">GITHUB</a>
+    <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+    <div id="nav-space"></div>
+    <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
+{% endblock %}
 
+{% block main %}
+    <form id="signin-form" method="POST" action="">
+        {{ form.hidden_tag() }}
+        {{ form.name }}
+        {{ form.password }}
+        {{ form.submit }}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <h1 class="{{ category }}">{{ message }}</h1>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </form>
+{% endblock %}
 
-    </main>
-</div>
-<script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
-
-</body>
-</html>
+{#        {% if form.name.errors %}#}
+{#            <ul class="errors">#}
+{#                {% for error in form.name.errors %}#}
+{#                    <li>{{ error }}</li>#}
+{#                {% endfor %}#}
+{#            </ul>#}
+{#        {% endif %}#}
