split css files

--- a/app/templates/impressum.html
+++ b/app/templates/impressum.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Impressum{% endblock %}
+{% block style %}<link rel="stylesheet" href="{{ url_for('static', filename="css/impressum.css") }}">{% endblock %}
 
 {% block main %}
     <div id='impressum'>
