--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}IPSHARE{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/base.css") }}">
+    {% block style %}{% endblock %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
 </head>
 <body>
