--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block style %}<link rel="stylesheet" href="{{ url_for('static', filename="css/main.css") }}">{% endblock %}
+
+
 {% block main %}
     <div id="ip-addr">
         <a data-numbers="{{ ip_addr }}">{{ ip_addr }}</a>
