--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,23 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>register</title>
-    {#    <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">#}
-</head>
-<body>
-{#    <h1 data-value="{{ ip_addr }}" class="numbers">{{ ip_addr }}</h1>#}
-{#    <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>#}
+{% extends 'base.html' %}
+{% block title %}register{% endblock %}
 
-    <h1>Register</h1>
+{% block nav %}
+    <a href="{{ url_for("root") }}" data-letters="IPSHARE">IPSHARE</a>
+    <a href="https://github.com/janluisho/ipshare" data-letters="GITHUB">GITHUB</a>
+    <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+    <div id="nav-space"></div>
+    <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
+{% endblock %}
 
-    <form id="register-form" method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.name }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
+{% block main %}
+    <div id="register">
+        <form id="register-form" method="POST" action="">
+            {{ form.hidden_tag() }}
+            {{ form.name }}
+            {{ form.password }}
+            {{ form.submit }}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <h1 class="{{ category }}">{{ message }}</h1>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </form>
 
-    Already have an account? <a href="{{ url_for('signin') }}">Login</a>
-</body>
-</html>
+    </div>
+{% endblock %}
