--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}signin{% endblock %}
+{% block style %}<link rel="stylesheet" href="{{ url_for('static', filename="css/signin.css") }}">{% endblock %}
 
 {% block nav %}
     <a href="{{ url_for("root") }}" data-letters="IPSHARE">IPSHARE</a>
