--- a/app/templates/impressum.html
+++ b/app/templates/impressum.html
@@ -19,5 +19,10 @@
         <p>
             Dies ist eine nicht kommerzielle Seite.<br>
         </p>
+        <p>
+            Der Hover Effect (scramble.js) wurde durch <a href='https://youtu.be/W5oawMJaXbU'>HYPERPLEXED</a> inspiriert.<br>
+            Welcher sich wiederum von <a href='https://kprverse.com'>KPR</a> inspirieren hat lassen.<br>
+            Der <a href='https://codepen.io/Hyperplexed/pen/rNrJgrd'>codepen</a> zum vergleich.
+        </p>
     </div>
 {% endblock %}
