typewriter effect and styling for registration-page

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -5,6 +5,7 @@
     --background-highlight-color: white;
     --border-color: white;
     --nav-height: 4rem;
+    --from_height: 17rem
 }
 
 body {
