--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
             {% endblock %}
         </main>
     </div>
-    <script src="{{ url_for('static', filename="scripts/Effect.js") }}"></script>
+    <script src="{{ url_for('static', filename="scripts/scramble.js") }}"></script>
+    {% block js %}{% endblock %}
 </body>
 </html>
