--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -26,7 +26,8 @@
                 {% endif %}
             {% endwith %}
         </form>
-        <div>
+        <div id="desc_field">
+            <h1 id="desc_heading" data-desc="">REGISTER</h1>
             <p id="desc_text" data-desc="">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                 sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
