--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -28,9 +28,9 @@ form {
 
 input {
     text-align: center;
-    border-radius: clamp(0.2rem, 0.5vw, 1rem);
     width: 25rem;
     border: 1px solid var(--border-color);
+    border-radius: clamp(0.2rem, 0.5vw, 1rem);
     color: var(--forground-color);
     background: var(--background-color);
     font-family: 'Space Mono', monospace;
@@ -39,6 +39,21 @@ input {
 
 input:focus {
     outline: 3px solid white; /*todo red or green depending on min and max len*/
+}
+
+#remember-container {
+    width: 25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    column-gap: 2rem;
+}
+
+#remember {
+    width: 1.1rem;
+    height: 1.1rem;
+    background: var(--background-color);
 }
 
 #submit {
