remember looks better now

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -5,7 +5,9 @@
     --background-highlight-color: white;
     --border-color: white;
     --nav-height: 4rem;
-    --from_height: 17rem
+    --from_height: 17rem;
+    --positive-color: limegreen;
+    --negative-color: firebrick;
 }
 
 body {
