--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
             <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
             <div id="nav-space"></div>
             {% if user.is_authenticated %}
-                <a href="" data-letters={{ user.name.upper() }}>{{ user.name.upper() }}</a>
+                <a href="{{ url_for("me") }}" data-letters={{ user.name.upper() }}>{{ user.name.upper() }}</a>
                 <a href="{{ url_for("signout") }}" data-letters="SIGN OUT">SIGN OUT</a>
             {% else %}
                 <a href="{{ url_for("register") }}" data-letters="REGISTER">REGISTER</a>
