checkbox in own file settings and delete form

--- a/app/static/css/me.css
+++ b/app/static/css/me.css
@@ -1,21 +1,8 @@
-
-#register-container {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    height: max(90%, var(--from_height));
-    column-gap: 10vw
+main {
+    padding-top: 2rem;
 }
 
-#desc_text {
-    width: 30rem;
-}
-
-form {
+form, #info {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -23,6 +10,27 @@ form {
     flex-direction: column;
     row-gap: 2rem;
     height: var(--from_height);
+    border: 1px solid var(--border-color);
+    border-radius: clamp(0.2rem, 0.5vw, 1rem);
+    padding: 2rem;
+}
+
+#info {
+    width: 25rem;
+    justify-content: start;
+    row-gap: 0;
+}
+
+#info > h1 {
+    margin-bottom: 0;
+}
+
+ul {
+    padding-left: 20px;
+    color: var(--forground-color);
+    background: var(--background-color);
+    font-family: 'Space Mono', monospace;
+    font-size: min(3vw, 1.5rem);
 }
 
 input {
@@ -40,17 +48,12 @@ input:focus {
     outline: 2px solid white; /*todo red or green depending on min and max len*/
 }
 
-#submit {
-    border: none;
-    font-size: min(4vw, 2rem);
-    width: 12rem;
-}
-
-#submit:hover {
-    color: var(--forground-highlight-color);
-    background: var(--background-highlight-color);
-}
-
 .error {
     color: var(--negative-color);
+}
+
+
+#submit_delete {
+    color: var(--negative-color);
+    border-color: var(--negative-color);
 }
