CustomSessionInterface for better cookie control.

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -21,7 +21,7 @@
             {{ form.hidden_tag() }}
             {{ form.name }}
             {{ form.password }}
-            <div class="checkbox-container" data-desc="REMEMBER ME" data-heading="REMEMBER ME" tabindex="3">
+            <div class="checkbox-container" style="--chars: 10ch;" data-desc="REMEMBER ME" data-heading="REMEMBER ME" tabindex="3">
                 {{ form.remember }}
                 <label for="remember">REMEMBER ME</label>
             </div>
