--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block style %}<link rel="stylesheet" href="{{ url_for('static', filename="css/main.css") }}">{% endblock %}
-
+{% block js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename="scripts/index.js") }}"></script>
+{% endblock %}
 
 {% block main %}
     <div id="ip-addr">
@@ -9,26 +12,11 @@
 
     {% if user.is_authenticated %}
     <div id="user_addrs">
-        <table>
-        {% for addr in user_addrs %}
-            <tr class="user_tr">
-                <th>{{ addr.device_name }}</th>
-                <th>{{ addr.address }}</th>
-                <th>{{ format_last_updated(addr.last_updated) }}</th>
-            </tr>
-        {% endfor %}
-        </table>
+        <table></table>
     </div>
     {% endif %}
 
-    <div id="visitor_addrs">
-        <table>
-        {% for addr in public_addrs %}
-            <tr class="visitor_tr">
-                <th>{{ addr.address }}</th>
-                <th>{{ format_last_updated(addr.last_updated) }}</th>
-            </tr>
-        {% endfor %}
-        </table>
+    <div id="public_addrs">
+        <table></table>
     </div>
 {% endblock %}
