--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
-{% block style %}<link rel="stylesheet" href="{{ url_for('static', filename="css/main.css") }}">{% endblock %}
+{% block style %}
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/index.css") }}">{% endblock %}
 {% block js %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+            integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+            crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename="scripts/index.js") }}"></script>
 {% endblock %}
 
@@ -15,8 +18,8 @@
     </div>
 
     {% if user.is_authenticated %}
-    <div id="user_addrs">
-        <table></table>
-    </div>
+        <div id="user_addrs">
+            <table></table>
+        </div>
     {% endif %}
 {% endblock %}
