--- a/app/templates/now.html
+++ b/app/templates/now.html
@@ -27,7 +27,7 @@
             <h1 id="desc_heading" data-desc="">Sharing Your Address</h1>
             <p id="desc_text" data-desc="">
                 {{ ip_addr }} will be stored on the server and publicly shared along with a timestamp.
-                If you want more privacy, consider <a href="{{ url_for("register") }}">registering</a>.
+                If you want more privacy, consider <a href="{{ url_for("login_views.register") }}">registering</a>.
             </p>
         </div>
     </div>
