--- a/app/templates/me.html
+++ b/app/templates/me.html
@@ -8,11 +8,11 @@
     <script src="{{ url_for('static', filename="scripts/me.js") }}"></script>{% endblock %}
 
 {% block nav %}
-    <a href="{{ url_for("root") }}" data-letters="IPSHARE">IPSHARE</a>
+    <a href="{{ url_for("ip_share_views.root") }}" data-letters="IPSHARE">IPSHARE</a>
     <a href="https://github.com/janluisho/ipshare" data-letters="GITHUB">GITHUB</a>
-    <a href="{{ url_for("impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+    <a href="{{ url_for("ip_share_views.impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
     <div id="nav-space"></div>
-    <a href="{{ url_for("signout") }}" data-letters="SIGN OUT">SIGN OUT</a>
+    <a href="{{ url_for("login_views.signout") }}" data-letters="SIGN OUT">SIGN OUT</a>
 {% endblock %}
 
 {% block main %}
