--- a/app/templates/ratelimit.html
+++ b/app/templates/ratelimit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}429 Too Many Requests{% endblock %}
 {% block nav %}
-    <a href="{{ url_for("root") }}" data-letters="IPSHARE">IPSHARE</a>
+    <a href="{{ url_for("ip_share_views.root") }}" data-letters="IPSHARE">IPSHARE</a>
 {% endblock %}
 
 {% block main %}
