--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -4,6 +4,7 @@
     --forground-highlight-color: black;
     --background-highlight-color: white;
     --border-color: white;
+    --table-header-color: rgb(40, 40, 50);
     --nav-height: 4rem;
     --from_height: 17rem;
     --positive-color: limegreen;
