--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,20 +1,25 @@
+:root {
+    --addr-width: 130rem;
+}
+
 #ip-addr {
     display: flex;
     flex-grow: 2;
     flex-direction: column;
     order: 1;
     width: 100%;
-    height: 32vh;
+    height: max(30vh, 2rem);
     gap: 1rem;
+    padding: 1rem;
     align-items: center;
     justify-content: center;
 }
 
 #ip-addr > a {
-    font-size: min(8vh, 8vw);
+    font-size: max(min(8vh, 8vw), 2rem);
     text-align: center;
     padding: 1rem;
-    width: 25vw;
+    width: 75vw;
     border-radius: clamp(1rem, 2vw, 5rem);
     text-decoration: none;
 }
@@ -24,47 +29,28 @@
     background: var(--background-highlight-color);
 }
 
-#user_addrs {
-    order: 3;
-}
-
-.user_tr {
+.user_tr, .public_tr {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr min(3vw, 2rem) min(3vw, 2rem);
+    grid-template-columns: 1.5fr 1fr 1fr min(3vw, 2rem) min(3vw, 2rem);
     justify-items: stretch;
 }
 
-.user_tr > th:first-child {
+.user_tr > th:first-child, .public_tr > th:first-child {
     text-align: right;
+    padding-right: 1ch;
 }
 
-.user_tr > th:nth-child(2) {
+.user_tr > th:nth-child(2), .public_tr > th:nth-child(2) {
     text-align: center;
+    padding-right: 1ch;
+    padding-left: 1ch;
 }
 
-.user_tr > th:last-child {
+.user_tr > th:nth-child(3), .public_tr > th:nth-child(3) {
     text-align: left;
-}
-
-#public_addrs {
-    order: 2;
-}
-
-.public_tr {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr min(3vw, 2rem);
-    justify-items: stretch;
-    gap: 3rem;
-}
-
-.public_tr > th:first-child {
-    text-align: right;
-}
-
-.public_tr > th:last-child {
-    text-align: left;
+    padding-right: 1ch;
+    padding-left: 1ch;
 }
 
 img {
@@ -79,7 +65,7 @@ table {
 
 input {
     text-align: center;
-    width: 25vw;
+    width: min(90vw, max(50vh, 10rem, 12vw));
     border: 1px solid var(--border-color);
     border-radius: clamp(1rem, 2vw, 5rem);
     color: var(--forground-color);
@@ -97,3 +83,71 @@ input:focus {
 .device_name:hover, .address:hover {
     text-decoration: var(--background-highlight-color) underline;
 }
+
+#edit-container {
+    display: flex;
+    flex-grow: 2;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    width: 100%;
+    order: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+#qr {
+    order: 1;
+    height: min(90vw, max(50vh, 10rem, 12vw));
+    width: auto;
+    align-self: center;
+}
+
+#edit {
+    order: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+#addrs > div > h1 {
+    text-align: center;
+    border: 1px solid var(--table-header-color);
+    border-radius: .5ch;
+    color: var(--table-header-color);
+}
+
+#edit-qr {
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding: 0.5rem;
+    width: min(90vw, max(50vh, 10rem));
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+#addrs {
+    order: 2;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 3rem;
+    justify-content: center;
+    width: min(90vw, var(--addr-width));
+}
+
+#addrs > div {
+    width: min(60rem, 90vw);
+}
+
+
+main {
+    column-gap: 0;
+}
+
