Texte auf der register seite.

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -37,14 +37,9 @@
         <div id="desc_field">
             <h1 id="desc_heading" data-desc="">REGISTER</h1>
             <p id="desc_text" data-desc="">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                Registering an account gives you access to QR codes and the API.
+                You can enjoy more privacy and find your IP addresses more easily.
+                However, a session cookie will be used to protect your login.
             </p>
         </div>
 
